[tool.poetry]
name = "pupmatcher"
version = "0.1.0"
description = ""
authors = ["Naomi Yocum <naomiyocum24@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.9.4"
requests = "^2.28.2"
pytest = "^7.2.1"
fastapi = {extras = ["all"], version = "^0.92.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
